--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,8 +5,19 @@ html {
     min-height: 100%;
 }
 
-a, a:hover, a:visited{
-	color: #666;
+body {
+    color: #4d4b4b;
+}
+
+a, a:hover, a:visited {
+    color: #4d4b4b;
+    font-variant: small-caps;
+}
+
+h2 {
+    font-weight: bold;
+    font-variant: small-caps;
+    text-align: center;
 }
 
 
@@ -21,16 +32,15 @@ a, a:hover, a:visited{
 }
 
 .fa-user-alt {
-    color: #666;
-    font-size: 2.2rem;
-    padding-left: 30px;
-    padding-right: 30px;
+    font-size: 1.6rem;
+    padding-right: 20px;
 }
 
 .blogger {
 	padding-left: 50px;
 	font-style: italic;
 }
+
 
 
 /* ------------- FOOTER ----------- */
@@ -45,6 +55,87 @@ a, a:hover, a:visited{
 	padding-top: 18px;
     margin-top: 50px;
 }
+
+
+/* ----------- PAGE ACCUEIL ------------- */
+
+.header {
+    background-image: url('../img/bg_header.jpg');
+    width: 100%;
+    height: 500px;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+    text-align: center;
+    padding-top: 190px;
+}
+
+h1 {
+    font-size: 4rem;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.article {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 50px 0;
+    margin: 80px 0 140px;
+    flex-wrap: wrap;
+    text-align: center;
+}
+
+.art {
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px 0px rgb(201, 201, 201);
+    height: 150px;
+}
+
+.art h2 {
+    margin-bottom: 30px;
+}
+
+
+/* ----------- PAGE ARTICLES ------------- */
+
+.flex {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin: 50px 0px 120px;
+}
+.art_cat {
+    width: 30%;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px 0px rgb(201, 201, 201);
+    height: 150px;
+    margin-bottom: 25px;
+}
+
+.art_cat h2 {
+    margin-bottom: 30px;
+}
+
+
+
+/* ----------- PAGE INSCRIPTION/CONNEXION ------------- */
+
+.form {
+    margin-top: 90px;
+    padding: 0px 300px;
+}
+
+.form h2 {
+/*     text-align: center;
+    font-variant: small-caps; */
+    margin-bottom: 30px;
+}
+
 
 
 /* ----------- PAGE COMPTE BLOGGER ------------- */
