--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,8 +42,10 @@ h2 {
 }
 
 .blogger {
-	padding-left: 50px;
-	font-style: italic;
+    padding-bottom: 30px;
+    font-style: italic;
+    text-align: center;
+    background-color: #f8f9fa;
 }
 
 
@@ -251,4 +253,20 @@ h1 {
 
 #addArt form div:last-child {
 	text-align: right;
+}
+
+
+/* --------------- PAGE ARTICLE BLOGGER ---------------- */
+
+.art_blogger{
+    margin: 50px 0 120px;
+    text-align: center;
+}
+.art_blogger h2{
+    margin: 30px;;
+}
+.art_blogger img {
+    width: 30%;
+    border-radius: 5px;
+    margin-bottom: 30px;
 }
