--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,10 @@ h2 {
     padding: 10px;
 }
 
+div {
+    word-wrap: break-word;
+}
+
 
 /* ------------ HEADER/NAV ------------- */
 
@@ -98,7 +102,8 @@ h1 {
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0px 0px 10px 0px rgb(201, 201, 201);
-    height: 150px;
+    height: 160px;
+    width: 30%;
 }
 
 .art h2 {
@@ -266,7 +271,7 @@ h1 {
     margin: 30px;;
 }
 .art_blogger img {
-    width: 30%;
+    width: 35%;
     border-radius: 5px;
     margin-bottom: 30px;
 }
