--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,10 +51,19 @@ textarea {
 }
 
 .blogger {
-    padding-bottom: 30px;
     font-style: italic;
-    text-align: center;
     background-color: #f8f9fa;
+    text-align: left;
+}
+
+.div-user {
+    background-color: #f8f9fa;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0 50px;
+    align-items: center;
+    padding-bottom: 15px;
 }
 
 
@@ -186,7 +195,7 @@ h1 {
 
 
 #pageBlogger .tab{
-	width: 1100px;
+	width: 100%;
 	margin: auto;
     margin-top: 30px;
     margin-bottom: 150px;
@@ -286,4 +295,52 @@ h1 {
     width: 35%;
     border-radius: 5px;
     margin-bottom: 30px;
+}
+
+
+/* --------------- MEDIA QUERIES ------------------- */
+
+@media screen and (max-width: 500px) {
+    .logo{
+        width: 100%;
+    }
+    .fa-user-alt {
+        font-size: 1rem;
+    }
+    .div-user {
+        flex-direction: column;
+        padding: 0 10px;
+    }
+    .blogger {
+        margin: 10px 0;
+    }
+    .header {
+        padding-top: 160px;
+    }
+    h1{
+        font-size: 3rem;
+    }
+
+    .article, .flex {
+        flex-direction: column;
+        margin: 50px 0 140px;
+        align-items: center;
+    }
+
+    .art, .art_cat {
+        width: 70%;
+        margin-bottom: 20px;
+    }
+
+    .form-art {
+        padding: 0 15px;
+    }
+
+    .art_blogger img {
+        width: 55%;
+    }
+
+    .mbox {
+        width: 85%;
+    }
 }
