--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -4501,6 +4501,7 @@ input[type="button"].btn-block {
 .navbar-light .navbar-nav .nav-link.show,
 .navbar-light .navbar-nav .nav-link.active {
   color: #4d4b4b;
+  text-align: center;
 }
 
 .navbar-light .navbar-toggler {
