add background color header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,10 @@ textarea {
     padding-bottom: 15px;
 }
 
+.connect {
+    background-color: #f8f9fa; 
+}
+
 
 
 /* ------------- FOOTER ----------- */
