--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,7 +110,7 @@ h1 {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    padding: 50px 0;
+    padding: 0 30px;
     margin: 80px 0 140px;
     flex-wrap: wrap;
 }
